# OpenGrok

./: .gitignore  CMakeLists.txt  README.md  client.cpp  freegrok.ini.example  main.c  main.cpp  servers.cpp  servers.hpp
client/: client.cpp  client_observer.cpp  client_observer.hpp  client_proxy.cpp  client_proxy.hpp  clients.cpp  clients.hpp  interfaces.hpp
config/: opengrok.cfg
docs/: ru.md
event_loop/: abstract.hpp  bytebuffer.hpp  event_loop.cpp  event_loop.hpp  event_loop_errors.hpp  inet.hpp  inet_errors.hpp  selector.cpp  selector.hpp
grok/: bin.cpp  bin.hpp  binary.cpp  binary.hpp  def.hpp  evloop.cpp  evloop.hpp  loop.cpp  loop.hpp  selector.cpp  selector.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp
opengrok/: def.cpp  def.hpp  glog.cpp  glog.hpp  id_pool.hpp  interfaces.hpp  log_errors.hpp  log_interface.hpp  loop.cpp  loop.hpp  opengrok.cpp  opengrok.hpp  opengrok_proxy.cpp  opengrok_proxy.hpp  packets_queue.cpp  packets_queue.hpp  types.h  utils.cpp  utils.hpp
src/: definitions.hpp
src/cameleo/: abstract.hpp  loop.cpp  loop.hpp  net.h  net_helpers.h  selector.cpp  selector.hpp
src/event_loop/: event_bus.h  event_loop.c  event_loop.h
src/freegrok/: defaults.hpp  iprotocol.hpp  proto_spec.h  streamer.hpp
src/grokbuffer/: bytebuffer.hpp  protocol.h  wrapper.cpp  wrapper.hpp
src/grokclient/: client.cpp  client.hpp  interface.hpp  proxy_client.cpp  proxy_client.hpp
src/grokserver/: config.hpp  http_interface.cpp  http_interface.hpp  id_pool.hpp  interface.hpp  magic_generator.hpp  proxy_server.cpp  proxy_server.hpp  server.cpp  server.hpp
src/hincl/: api.c  hincl.cpp  hincl.hpp  http.c  llhttp.c  llhttp.h
src/lib/: epoll.h  fifo.h  hashmap.h  id_pool.h  libdef.h  platform.h  queue.h  spinlock.h  vector.h  wepoll.c  wepoll.h
src/loop/: bytebuffer.hpp  epoll.h  iobserver.hpp  loop.cpp  loop.hpp  loop_exceptions.hpp  platform.h  selector.cpp  selector.hpp  sockets.h
src/opengrok/: id_pool.hpp  protocol_definition.hpp
src/opengrok/client/: client.cpp  client.hpp  interface.hpp  proxy_client.cpp  proxy_client.hpp
src/opengrok/server/: interface.hpp  proxy_server.cpp  proxy_server.hpp  server.cpp  server.hpp
src/server/: server.c  server.h
win/: libzstd.so.1.5.0
